edit title index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <section class="heap">
   <div class="container  heap__wrapper  js-heap-wrapper">
-    <h2 class="heap__title">Why <span>Watt</span>san ?</h2>
+    <h2 class="heap__title">Why <span>San</span>watt ?</h2>
     <picture class="heap__img">
       <source srcset="https://picsum.photos/600/350" type="image/webp">
       <img src="https://picsum.photos/600/350" loading="lazy" alt="" width="600" height="350">
